--- a/readme.adoc
+++ b/readme.adoc
@@ -1,9 +1,12 @@
 = K-Queue
 :source-highlighter: highlightjs
-:lib-version: 0.1.0
+:lib-version: 0.2.0
+:feature-version: 0.2.0
+:gh-docs-url: https://k-libs.github.io/k-queue/dokka
+:package-name: io.klibs.collections
 
 image:https://img.shields.io/badge/license-MIT-green[GitHub]
-image:https://img.shields.io/badge/docs-dokka-brightgreen[link="https://k-libs.github.io/k-queue/dokka/0.1.0/queue/io.klibs.collections/index.html"]
+image:https://img.shields.io/badge/docs-dokka-brightgreen[link="{gh-docs-url}/{feature-version}/queue/{package-name}/"]
 image:https://img.shields.io/maven-central/v/io.k-libs/queue[link="https://search.maven.org/artifact/io.k-libs/queue"]
 
 A pure Kotlin FIFO queue implementation.
@@ -47,3 +50,17 @@ for (item in queue)
   println("Another one popped off the queue!")
 ----
 
+== Version History
+
+[%header, cols="1m,2,9"]
+|===
+| Version | Documentation | Description
+
+| v0.2.0
+| link:{gh-docs-url}/0.2.0/queue/{package-name}/[Dokka]
+| Add `clear()` method to `Queue` type.
+
+| v0.1.0
+| link:{gh-docs-url}/0.1.0/queue/{package-name}/[Dokka]
+| Initial release.
+|===
