--- a/readme.adoc
+++ b/readme.adoc
@@ -55,6 +55,11 @@ for (item in queue)
 [%header, cols="1m,2,9"]
 |===
 | Version | Documentation | Description
+
+| v0.4.0
+| link:{gh-docs-url}/0.3.0/queue/{package-name}/[Dokka]
+| Add `copyToArray` and `flushToArray`
+
 | v0.3.0
 | link:{gh-docs-url}/0.3.0/queue/{package-name}/[Dokka]
 | Breaking minor rewrite, see https://github.com/k-libs/k-queue/releases/tag/v0.3.0[release notes].
